Add webtite header by my self

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="nav_bar">
       <div class="nav_logo">
-        <i class="fas fa-birthday-cake"></i>Happy Birthday
+        <i class="fas fa-birthday-cake"></i><a href="#">Happy Birthday</a>
       </div>
       <ul class="nav_menu">
         <li class="nav_menu_list"><a href="#">Home</a></li>
@@ -31,5 +31,6 @@
         <a href="#"><i class="fas fa-heart"></i></a>
       </div>
     </nav>
+    <div class="nav_button"><i class="fas fa-bars"></i></div>
   </body>
 </html>
